# BlueRice

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  bluerice  makefile
.github/: FUNDING.yml
include/: BluetoothManager.h  BluetoothUtils.h  SettingsManager.h  SettingsUtils.h  WofiFrontend.h
src/: BluetoothManager.cpp  BluetoothUtils.cpp  SettingsManager.cpp  SettingsUtils.cpp  WofiFrontend.cpp  main.cpp
